tests/dataset/tpc-ds/compiler/c/q39.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:41Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static double _avg(list_int v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
extern double math_sqrt(double x);

typedef struct {
  int w_warehouse_sk;
  int i_item_sk;
  double cov;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int inv_item_sk;
  int inv_warehouse_sk;
  int inv_date_sk;
  int inv_quantity_on_hand;
} inventory_t;
typedef struct {
  int len;
  inventory_t *data;
} inventory_list_t;
inventory_list_t create_inventory_list(int len) {
  inventory_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(inventory_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int w_warehouse_sk;
  const char *w_warehouse_name;
} warehouse_t;
typedef struct {
  int len;
  warehouse_t *data;
} warehouse_list_t;
warehouse_list_t create_warehouse_list(int len) {
  warehouse_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(warehouse_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int w;
  int i;
  double qty;
} monthly_item_t;
typedef struct {
  int len;
  monthly_item_t *data;
} monthly_item_list_t;
monthly_item_list_t create_monthly_item_list(int len) {
  monthly_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(monthly_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int w;
  int i;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int w;
  int i;
  int qtys;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int w;
  int i;
  list_float qtys;
} tmp_item2_t;
typedef struct {
  int len;
  tmp_item2_t *data;
} tmp_item2_list_t;
tmp_item2_list_t create_tmp_item2_list(int len) {
  tmp_item2_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item2_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q39_simplified_summary;
static void test_TPCDS_Q39_simplified() {
  tmp1_t tmp1[] = {
      (tmp1_t){.w_warehouse_sk = 1, .i_item_sk = 1, .cov = 1.539600717839002}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q39_simplified_summary.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q39_simplified_summary.len; i3++) {
      if (test_TPCDS_Q39_simplified_summary.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  inventory_t inventory[] = {(inventory_t){.inv_item_sk = 1,
                                           .inv_warehouse_sk = 1,
                                           .inv_date_sk = 1,
                                           .inv_quantity_on_hand = 10},
                             (inventory_t){.inv_item_sk = 1,
                                           .inv_warehouse_sk = 1,
                                           .inv_date_sk = 2,
                                           .inv_quantity_on_hand = 10},
                             (inventory_t){.inv_item_sk = 1,
                                           .inv_warehouse_sk = 1,
                                           .inv_date_sk = 3,
                                           .inv_quantity_on_hand = 250}};
  int inventory_len = sizeof(inventory) / sizeof(inventory[0]);
  item_t item[] = {(item_t){.i_item_sk = 1}};
  int item_len = sizeof(item) / sizeof(item[0]);
  warehouse_t warehouse[] = {
      (warehouse_t){.w_warehouse_sk = 1, .w_warehouse_name = "W1"}};
  int warehouse_len = sizeof(warehouse) / sizeof(warehouse[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2000, .d_moy = 1},
      (date_dim_t){.d_date_sk = 2, .d_year = 2000, .d_moy = 2},
      (date_dim_t){.d_date_sk = 3, .d_year = 2000, .d_moy = 3}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  monthly_item_list_t monthly = (monthly_item_list_t){0, NULL};
  map_string_int tmp4 = map_string_int_create(0);
  int grouped = tmp4;
  for (int tmp5 = 0; tmp5 < monthly.len; tmp5++) {
    monthly_item_t m = monthly.data[tmp5];
    char *tmp6 = _str((tmp_item_t){.w = m.w, .i = m.i});
    const char *key = tmp6;
    if (key in grouped) {
      int g = grouped.data[key];
      grouped.data[key] = (tmp_item1_t){.w = g.w, .i = g.i, .qtys = 0};
    } else {
      list_int tmp7 = list_int_create(1);
      tmp7.data[0] = m.qty;
      list_int tmp8 = list_int_create(1);
      tmp8.data[0] = m.qty;
      grouped.data[key] = (tmp_item2_t){.w = m.w, .i = m.i, .qtys = tmp8};
    }
  }
  list_int summary = list_int_create(0);
  for (int tmp9 = 0; tmp9 < 0.len; tmp9++) {
    int g = 0.data [tmp9];
    double mean = _avg(g.qtys);
    double sumsq = 0.0;
    for (int tmp10 = 0; tmp10 < g.qtys.len; tmp10++) {
      int q = g.qtys.data[tmp10];
      sumsq = sumsq + (q - mean) * (q - mean);
    }
    double variance = sumsq / (g.qtys.len - 1);
    double cov = __builtin_sqrt(variance) / mean;
    if (cov > 1.5) {
      list_int tmp11 = list_int_create(0);
      int tmp12_data[1];
      list_int tmp12 = {1, tmp12_data};
      tmp12.data[0] =
          (tmp_item_t){.w_warehouse_sk = g.w, .i_item_sk = g.i, .cov = cov};
      list_int tmp13 = concat_list_int(tmp11, tmp12);
      summary = tmp13;
    }
  }
  list_int tmp14 = list_int_create(0);
  _json_list_int(tmp14);
  test_TPCDS_Q39_simplified_summary = summary;
  test_TPCDS_Q39_simplified();
  return 0;
}
